# dhm-2024

./: LICENSE  Readme.md
flag-generator-extended/: flag-generator-extended.yaml
flag-generator-extended/deploy/: .gitignore  Readme.md  ulp-compi.patch
flag-generator-extended/deploy/challenge/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
flag-generator-extended/deploy/challenge/main/: CMakeLists.txt  chall_decrypt.c  chall_ulp_fsm.c  chall_ulp_riscv.c  chall_usb.c  chall_webserver.c  flag_generator_main.c
flag-generator-extended/deploy/challenge/main/include/: chall_decrypt.h  chall_ulp_fsm.h  chall_ulp_riscv.h  chall_usb.h  chall_webserver.h
flag-generator-extended/deploy/challenge/main/ulp-fsm/: decrypt.S
flag-generator-extended/deploy/challenge/main/ulp-riscv/: main.c
flag-generator-extended/deploy/generator/: build_generators.py  extended.py  finite.py  riscy.py
flag-generator-extended/for-testers/: Readme.md  index.html
flag-generator-extended/public/: extended.gen  extended_old_decrypted.gen  extended_old_encrypted.gen
flag-generator-extended/solution/: solve.py  test.py
flag-generator-finite/: flag-generator-finite.yaml
flag-generator-finite/public/: finite.gen  finite_old_decrypted.gen  finite_old_encrypted.gen
flag-generator-finite/solution/: finite.py  solve.py
flag-generator-riscy/: flag-generator-finite.yaml
flag-generator-riscy/public/: riscy.gen  riscy_old_decrypted.gen  riscy_old_encrypted.gen
flag-generator-riscy/solution/: solve.py
saes/: saes.yaml
saes/deploy/: Dockerfile  chall.py  flag.txt  saes.py
saes/public/: aes.py  chall.py  flag.txt  saes.py
saes/solution/: solve.py
time-lock/: time-lock.yaml
time-lock/deploy/: encode.py
time-lock/public/: locked.py
